Fix #37122: Text Editor: New Open-Shortcut different from Text > Open Text Block

Seems no user counter tricks are needed from r23598.

Also, r33453 is obviously wrong, because new ID's user counter is 1,
and could not exceed this value.